<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/dialogImage"
        android:layout_width="43dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:src="@drawable/delete_icon"
        app:tint="@color/pureRedColor"/>

    <TextView
        android:id="@+id/deleteTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_product"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/deleteMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_delete_message"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/forgotPasswordTextColor"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:layout_marginEnd="15dp"
            />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/pureRedColor"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:layout_marginStart="15dp"/>
    </LinearLayout>


</LinearLayout>