<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="7dp"
            app:cardUseCompatPadding="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/productRowLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/nameQuantityLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/productNameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:text="@string/sample_product_name"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/productQtyTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:text="@string/sample_quantity"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_marginTop="5dp"
                        app:layout_constraintStart_toStartOf="@id/productNameTextView"
                        app:layout_constraintTop_toBottomOf="@id/productNameTextView" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/deleteIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/blank_background"
                    android:src="@drawable/delete_icon"
                    app:tint="@color/iconColor"
                    android:layout_marginBottom="5dp"
                    app:layout_constraintBottom_toTopOf="@id/productPriceTextView"
                    app:layout_constraintEnd_toEndOf="@id/productPriceTextView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/productPriceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/green_text_view_background"
                    android:fontFamily="@font/lato_bold"
                    android:padding="8dp"
                    android:textSize="15sp"
                    android:text="@string/sample_price"
                    android:textColor="@color/greenColor"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>