<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.Login.LoginActivity"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="254dp"
            android:src="@drawable/login_image_without_bg" />

        <TextView
            android:id="@+id/login_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ein_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:paddingTop="8dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/user_name_icon"
                app:tint="@color/iconColor"/>

            <EditText
                android:id="@+id/userName_edit_text"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:hint="@string/enter_username"
                android:fontFamily="@font/roboto"
                android:inputType="text"
                android:paddingStart="8dp"
                android:paddingTop="5dp"
                android:textSize="17sp"
                android:maxLength="25"
                android:backgroundTint="@color/iconColor"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="8dp"
            android:layout_marginTop="5dp">

            <ImageView
                android:id="@+id/password_icon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/lock_icon"
                app:tint="@color/iconColor" />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:hint="@string/enter_password"
                android:fontFamily="@font/roboto"
                android:paddingStart="8dp"
                android:paddingTop="5dp"
                android:textSize="17sp"
                android:maxLength="20"
                android:inputType="textPassword"
                android:backgroundTint="@color/iconColor"/>
        </LinearLayout>

        `

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_radius_button_bg"/>`

        <LinearLayout
            android:id="@+id/layout_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="New Here?"/>

            <TextView
                android:id="@+id/move_to_register_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Register Here"
                android:textColor="@color/forgotPasswordTextColor"
                android:textStyle="bold"
                android:layout_marginStart="5dp"/>

        </LinearLayout>
    </LinearLayout>
</layout>